cholera 0.7.5.9008
==================

- add/set segmentHighlight(col = "red").


cholera 0.7.5.9007
==================

- add/use latlongAuxilliaryFunctions.R
- add latitudeLongitudeFatality().
- add latitudeLongitudeAddress().
- add rd.sample data.
- add latitudeLongitudeRoads().
- add frame.sample data.
- add latitudeLongitudeFrame().


cholera 0.7.5.9006
==================

- add latlongCoordinates().


cholera 0.7.5.9005
==================

- add latlongPumps().


cholera 0.7.5.9004
==================

- add/set addPump(cex = 1).


cholera 0.7.5.9003
==================

- change type = "road" to "roads" in plot.walking().
- fix pumpTokens() for plot.walking(type = "roads").


cholera 0.7.5.9002
==================

- amend pumpTokens(); "gray" out unobserved and unselected pumps.


cholera 0.7.5.9001
==================

- amend oxford.weather data to use entire data set.
- amend plot.oxfordWeather(statistic = "rain").
- add/set plot.oxfordWeather(month = "september").
- add/use rainPlot().
- add/use temperaturePlot().


cholera 0.7.5.9000
==================

- add streetNames().


cholera 0.7.5
==================

# New Data #

- oxford.weather

# New Functions #

- isoLines()
- isoVertices()
- oxfordWeather()
- povertyLondon()
- segmentHighlight()
- winterTemperatures()

# Function Changes #

- add addCase(case = NULL).
- add and set neighborhoodVoronoi(case.location = "address").
- add and set neighborhoodVoronoi(pump.location = "nominal").
- add subtitles for selected pumps in plot.euclidean().

# Fixes #

- fix unneeded warnings in addEuclideanPath().
- fix typo, from Silver Street to Cross Street, for meter benchmark in roads
  vignette.

# Vignettes #

- add discussion of Euclidean and Voronoi "expected" neighborhoods.


cholera 0.7.0
==================

# New Feature #

- support for parallel computation on Windows.

# Fixes #

- fix computation of core in neighborhoodWalking().